# apple-diagnostics-format

./: .gitignore  README.md  pyproject.toml
awdd/: __init__.py  definition.py  json_writer.py  manifest.py  metadata.py  object.py  parser.py  root_manifest.py  text_writer.py
awdd/protos/: metadata_pb2.py
docs/: FORMAT.md  awdd.txt
protos/: metadata.proto
rosetta/: FORMAT.md  awdd.txt
tests/: __init__.py  collect_all_tags.py  read_all_tags_from_logs.py  test_load_manifests.py  test_parse_log.py
tests/fixtures/: .gitingore
